h930: enable system as root
Change-Id: Ic0e0cc3363e22dabc7792837e6c0788ac502ae05

--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -4591,6 +4591,7 @@ CONFIG_LGE_MISC_PWR_CONTROLLER=y
 # CONFIG_LGE_PKM is not set
 # CONFIG_LGE_PAY_MME is not set
 CONFIG_LGE_DM_VERITY_RECOVERY=y
+CONFIG_LGE_MSM8998_ENABLE_SYSTEM_AS_ROOT=y
 
 #
 # LGE QFPROM Values
